[package]
name = "proto_refexp"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "proto_refexp"

[profile.release]
debug = true

[dependencies]
serde = "1.0.152"
serde_json = { version = "1.0.89", features = ["preserve_order"] }
simd-json = "0.7.0"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }
indoc = "1.0.8"
pretty_assertions = "1.3.0"

[[bench]]
name = "expansion"
harness = false
